--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/images/lucdalogo.PNG">
     <title>Lucda</title>
     <!-- for icons  -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -82,10 +83,9 @@
                                         <span class="text-primary">Creative</span>
                                         Developers Association
                                     </h1>
-                                    <p>This is Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam eius
-                                        vel tempore consectetur nesciunt? Nam eius tenetur recusandae optio aperiam.</p>
+                                    <p>We have various Directorates with in the association to take care of various sections of the association for effective and efficient execution of task and these include, the research and development committee, the projects managment committee, the volunteer and outreach committee and the capacity building committee. We believe in doing more with less. </p>
                                     <div class="banner-btn mt-4">
-                                        <a href="#menu" class="sec-btn">Support Us</a>
+                                        <a href="#register_project" class="sec-btn">Register Project</a>
                                     </div>
                                 </div>
                             </div>
@@ -146,11 +146,7 @@
                                 <p class="sec-sub-title mb-3 text-primary">About Us</p>
                                 <h2 class="h2-title">Who Are We?</h2>
 
-                                <p>This is Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolore at
-                                    aspernatur eveniet temporibus placeat voluptatum quaerat accusamus possimus
-                                    cupiditate, quidem impedit sed libero id perspiciatis esse earum repellat quam.
-                                    Dolore modi temporibus quae possimus accusantium, cum corrupti sed deserunt iusto at
-                                    sapiente nihil sint iste similique soluta dolor! Quod.</p>
+                                <p>LUCDA is a student’s association focused on forming local solutions for global problems, we believe that solutions to all our problems are within the people’s heads affected by the problem, they only need to be mentored on how to solve the problems through capacity building, ensuring awareness and exposure to resources required to solve the problem in place. </p>
                             </div>
                         </div>
                     </div>
@@ -166,7 +162,7 @@
             </section>
 
             <section style="background-image: url(assets/images/menu-bg.png);"
-                class="our-menu section bg-light repeat-img" id="menu">
+                class="our-menu section bg-light repeat-img" id="services">
                 <div class="sec-wp">
                     <div class="container">
                         <div class="row">
@@ -184,7 +180,7 @@
                                 <div class="col-lg-4 col-sm-6 dish-box-wp breakfast" data-cat="breakfast">
                                     <div class="dish-box text-center">
                                         <div class="dist-img">
-                                            <img src="assets/images/dish/website.png" height="250vh" width="250vw"
+                                            <img src="assets/images/dish/website.png" height="150vh" width="150vw"
                                                 alt="">
                                         </div>
                                         <div class="dish-rating">
@@ -207,7 +203,7 @@
                                 <div class="col-lg-4 col-sm-6 dish-box-wp breakfast" data-cat="breakfast">
                                     <div class="dish-box text-center">
                                         <div class="dist-img">
-                                            <img src="assets/images/dish/computer.png" height="250vh" width="250vw"
+                                            <img src="assets/images/dish/computer.png" height="150vh" width="150vw"
                                                 alt="">
                                         </div>
                                         <div class="dish-rating">
@@ -229,7 +225,7 @@
                                 <div class="col-lg-4 col-sm-6 dish-box-wp lunch" data-cat="lunch">
                                     <div class="dish-box text-center">
                                         <div class="dist-img">
-                                            <img src="assets/images/dish/research.jpg" height="250vh" width="250vw"
+                                            <img src="assets/images/dish/research.jpg" height="150vh" width="150vw"
                                                 alt="">
                                         </div>
                                         <div class="dish-rating">
@@ -261,7 +257,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="sec-title text-center mb-5">
+                            <div class="sec-title text-center mb-5" id="register_project">
                                 <p class="sec-sub-title mb-3">New Projects</p>
                                 <h2 class="h2-title">Register Your project with LUCDA</h2>
 
@@ -278,7 +274,7 @@
                         <input type="email" name="Email Address" placeholder="Your Email Address" required>
                         <input type="text" name="Project Name" placeholder="Your Project Name" required>
                         <textarea name="Message" placeholder="Brief Description about your Project"  rows="7"></textarea>
-                        <button type="submit" class="btn btn-primary">Register Project</button>
+                        <button type="submit" class="sec-btn btn">Register Project</button>
                     </form>
         
                 </div>
@@ -484,7 +480,7 @@
                                             class="team-img back-img">
 
                                         </div>
-                                        <h3 class="h3-title">Lucy Abongo</h3>
+                                        <h3 class="h3-title">Lucy Alobo</h3>
                                         <p><small>President</small></p>
                                         <div class="social-icon">
                                             <ul>
