updated the form

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 </div>
                                 <div class="banner-img-text mt-4 m-auto">
                                     <h5 class="h5-title">Lucda</h5>
-                                    <p>this is Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                    <p>Availing local solutions to global problems</p>
                                 </div>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
                                 
                                 
                                 <div class="brands-box">
-                                    <img src="assets/images/brands/b5.pn" alt="KALYTE">
+                                    <img src="assets/images/brands/b5.pn" alt="Beacon hostels">
                                 </div>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
                                 <div class="col-lg-4 col-sm-6 dish-box-wp breakfast" data-cat="breakfast">
                                     <div class="dish-box text-center">
                                         <div class="dist-img">
-                                            <img src="assets/images/dish/website.png" height="150vh" width="150vw"
+                                            <img src="assets/images/dish/capacity.jpeg" height="150vh" width="150vw"
                                                 alt="">
                                         </div>
                                         <div class="dish-rating">
@@ -188,12 +188,11 @@
                                             <i class="uil uil-star"></i>
                                         </div>
                                         <div class="dish-title">
-                                            <h3 class="h3-title">Website Develpment</h3>
-                                            <p>1200+</p>
+                                            <h3 class="h3-title">Capacity Building</h3>
+                                            <p>1200+ students</p>
                                         </div>
                                         <div class="dish-info">
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
-                                                perspiciatis.</p>
+                                            <p>Capacity building sessions are tailored for every group for at least once for 2 hours every semester. </p>
                                         </div>
 
                                     </div>
@@ -212,10 +211,10 @@
                                         </div>
                                         <div class="dish-title">
                                             <h3 class="h3-title">Projects Managment</h3>
-                                            <p>8000+ </p>
+                                            <p>8000+ Projects</p>
                                         </div>
                                         <div class="dish-info">
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, architecto.
+                                            <p>Projects are managed and controled inline with the desired goals to success
                                             </p>
                                         </div>
 
@@ -225,7 +224,7 @@
                                 <div class="col-lg-4 col-sm-6 dish-box-wp lunch" data-cat="lunch">
                                     <div class="dish-box text-center">
                                         <div class="dist-img">
-                                            <img src="assets/images/dish/research.jpg" height="150vh" width="150vw"
+                                            <img src="assets/images/dish/research.png" height="150vh" width="150vw"
                                                 alt="">
                                         </div>
                                         <div class="dish-rating">
@@ -234,11 +233,10 @@
                                         </div>
                                         <div class="dish-title">
                                             <h3 class="h3-title">Research</h3>
-                                            <p>1000+</p>
+                                            <p>1300+ Discoveries</p>
                                         </div>
                                         <div class="dish-info">
-                                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores,
-                                                facere?</p>
+                                            <p>We emphasis Shared Discovery and Development of Ideas with in the University</p>
                                         </div>
 
                                     </div>
@@ -265,7 +263,7 @@
                         </div>
                     </div>
 
-                    <form action="" method="POST" class="contact_form">
+                    <form action="https://formspree.io/f/mjvdndpq" method="POST" class="contact_form">
                         <div class="form_name">
                             <input type="text" name="First Name" placeholder="First Name" required>
                             <input type="text" name="Last Name" placeholder="Last Name" required>
@@ -534,8 +532,8 @@
                                             class="team-img back-img">
 
                                         </div>
-                                        <h3 class="h3-title">Nakakawa Juliet</h3>
-                                        <p><small>Position</small></p>
+                                        <h3 class="h3-title">Bavva Justine</h3>
+                                        <p><small>Secretary</small></p>
                                         <div class="social-icon">
                                             <ul>
                                                 <li>
@@ -708,9 +706,7 @@
                                         <div class="blog-text">
                                             <p class="blog-date">May.17.2023</p>
                                             <a href="#" class="h4-title">Lira University Internal Exibition</a>
-                                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ipsa
-                                                explicabo atque reprehenderit beatae! Accusantium soluta consequuntur
-                                                blanditiis amet ad.</p>
+                                            <p>This year, Lira University Creative Developers’ Association under the supervision of Prof. Okaka Opio Dokotum has organized an internal exhibition to enable students from different disciplines to share and integrate knowledge in the fields of innovation, research and creativity.</p>
                                             <a href="#" class="sec-btn">Read More</a>
                                         </div>
                                     </div>
@@ -760,8 +756,7 @@
                                         <div class="sec-wp">
                                             <div class="newsletter-box-text">
                                                 <h2 class="h2-title">Subscribe our newsletter</h2>
-                                                <p>This is Lorem ipsum dolor sit amet consectetur adipisicing elit ad
-                                                    veritatis.</p>
+                                                <p>Lets avail local solutions to global problems together</p>
                                             </div>
                                             <form action="#" class="newsletter-form">
                                                 <input type="email" class="form-input"
@@ -787,10 +782,11 @@
                                     <div class="footer-info">
                                         <div class="footer-logo">
                                             <a href="index.html">
-                                                <h3 class="h3-title">LUCDA</h3>
+                                                <img src="assets/images/lucdalogo.PNG" width="160" height="100px" alt="Logo" style="border-radius: 15px;"> 
+                                                <!-- <h3 class="h3-title">LUCDA</h3> -->
                                             </a>
                                         </div>
-                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia, tenetur.
+                                        <p>Availing local solutions to global problems
                                         </p>
 
                                         <a href="tel:+256778237748"><i class="uil uil-phone"></i>+256-7782-37748</a>
