--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                                 </div>
                                 <div class="col-lg-4 swiper-slide">
                                     <div class="team-box text-center">
-                                        <div style="background-image: url(assets/images/team/juiet.png);"
+                                        <div style="background-image: url(assets/images/team/);"
                                             class="team-img back-img">
 
                                         </div>
@@ -605,8 +605,7 @@
                                                 <h3 class="h3-title">
                                                     Nyanzi Mathias
                                                 </h3>
-                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque,
-                                                    quisquam.</p>
+                                                <p>I am so confident that the work done by the Lucda community is a greate creations and development of innovations</p>
                                             </div>
                                         </div>
                                     </div>
@@ -627,8 +626,7 @@
                                                 <h3 class="h3-title">
                                                     Okot Joshua
                                                 </h3>
-                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque,
-                                                    quisquam.</p>
+                                                <p>I was so impressed by how the Lucda community managed my project, it was realy beyond my expectation</p>
                                             </div>
                                         </div>
                                     </div>
@@ -649,8 +647,7 @@
                                                 <h3 class="h3-title">
                                                     Lukenge Benard
                                                 </h3>
-                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque,
-                                                    quisquam.</p>
+                                                <p>Capacity building with Lucda community gave me a greate insipiation </p>
                                             </div>
                                         </div>
                                     </div>
@@ -658,7 +655,7 @@
                                         <div class="testimonials-box">
                                             <div class="testimonial-box-top">
                                                 <div class="testimonials-box-img back-img"
-                                                    style="background-image: url(assets/images/testimonials/t4.jpg);">
+                                                    style="background-image: url(assets/images/testimonials/);">
                                                 </div>
                                                 <div class="star-rating-wp">
                                                     <div class="star-rating">
@@ -671,8 +668,7 @@
                                                 <h3 class="h3-title">
                                                     Nahurira Gaston
                                                 </h3>
-                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque,
-                                                    quisquam.</p>
+                                                <p>Lucda is one of the best communities I have ever seen because of the creativity and the innovative ideas </p>
                                             </div>
                                         </div>
                                     </div>
@@ -706,7 +702,7 @@
                                         <div class="blog-text">
                                             <p class="blog-date">May.17.2023</p>
                                             <a href="#" class="h4-title">Lira University Internal Exibition</a>
-                                            <p>This year, Lira University Creative Developers’ Association under the supervision of Prof. Okaka Opio Dokotum has organized an internal exhibition to enable students from different disciplines to share and integrate knowledge in the fields of innovation, research and creativity.</p>
+                                            <p>Lira University Creative Developers’ Association under the supervision of Prof. Okaka Opio Dokotum has organized an internal exhibition to enable students from different disciplines to share and integrate knowledge in the fields of innovation, research and creativity.</p>
                                             <a href="#" class="sec-btn">Read More</a>
                                         </div>
                                     </div>
@@ -719,9 +715,7 @@
                                             <p class="blog-date">May.26.2023</p>
                                             <a href="#" class="h4-title">Flutter Training with inovation village and
                                                 kakebe technologies</a>
-                                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ipsa
-                                                explicabo atque reprehenderit beatae! Accusantium soluta consequuntur
-                                                blanditiis amet ad.</p>
+                                            <p>Innovation Village in conjuction with Kakabe technologies worked in hand with the lira university creative developers association and had a flutter session to enhance application development and kwoledge advancement in Northern Region </p>
                                             <a href="#" class="sec-btn">Read More</a>
                                         </div>
                                     </div>
@@ -866,7 +860,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="scrolltop" id="#home"><i class="uil uil-angle-up"></i></button>
+                        <button class="scrolltop" ><i class="uil uil-angle-up" id="#home"></i></button>
                     </div>
                 </div>
             </footer>
