--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 
                                 
                                 <div class="brands-box">
-                                    <img src="assets/images/brands/b5.pn" alt="Beacon hostels">
+                                    <img src="assets/images/brands/beacon.jpeg" alt="Beacon hostels" width="500vw" height="80vh">
                                 </div>
                             </div>
                         </div>
@@ -446,7 +446,7 @@
 
                                 <div class="col-lg-4 swiper-slide">
                                     <div class="team-box text-center">
-                                        <div style="background-image: url(assets/images/team/shaka.jpg);"
+                                        <div style="background-image: url(assets/images/team/isihaka.jpeg);"
                                             class="team-img back-img">
 
                                         </div>
@@ -528,11 +528,11 @@
                                 </div>
                                 <div class="col-lg-4 swiper-slide">
                                     <div class="team-box text-center">
-                                        <div style="background-image: url(assets/images/team/);"
+                                        <div style="background-image: url(assets/images/team/baava.jpeg);"
                                             class="team-img back-img">
 
                                         </div>
-                                        <h3 class="h3-title">Bavva Justine</h3>
+                                        <h3 class="h3-title">Baava Justine</h3>
                                         <p><small>Secretary</small></p>
                                         <div class="social-icon">
                                             <ul>
@@ -655,7 +655,7 @@
                                         <div class="testimonials-box">
                                             <div class="testimonial-box-top">
                                                 <div class="testimonials-box-img back-img"
-                                                    style="background-image: url(assets/images/testimonials/);">
+                                                    style="background-image: url(assets/images/testimonials/gaston.jpeg);">
                                                 </div>
                                                 <div class="star-rating-wp">
                                                     <div class="star-rating">
