--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                         alt="COMPASSWEEKLY NEWS">
                                 </div>
                                 <div class="brands-box">
-                                    <img src="assets/images/brands/amarahub.jpeg" alt="Amara Hub">
+                                    <img src="assets/images/brands/amarahub.png" alt="Amara Hub">
                                 </div>
                                 
                                 
